Se puso nombre a la pagina

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     <header class="w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-container mySlides">
             <img class="w3-image w3-animate-fading" src="image/hardware-e1551046878558.jpg" style="width:100%;">
-            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">Nombre Empresa (logo)</h1>
+            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">HADTECSOFT</h1>
         </div>
         <div class="w3-display-container mySlides">
             <img class="w3-image w3-animate-fading" src="image/hardware-1-e1566848759237.jpg" style="width:100%;">
-            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">Nombre Empresa (logo)</h1>
+            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">HADTECSOFT</h1>
         </div>
         <div class="w3-display-container mySlides">
             <img class="w3-image w3-animate-fading" src="image/reparacion.jpg" style="width:100%;">
-            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">Nombre Empresa (logo)</h1>
+            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">HADTECSOFT</h1>
         </div>
         <div class="w3-display-container mySlides">
             <img class="w3-image w3-animate-fading" src="image/tecnico-sostiene-destornillador-reparar-computadora_35048-769.jpg" style="width:100%;">
-            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">Nombre Empresa (logo)</h1>
+            <h1 class="w3-xxxlarge w3-display-middle w3-container w3-padding-16 w3-theme-d1 borde">HADTECSOFT</h1>
         </div>
         <script src="js/carrusel.js"></script>
     </header>
