Se puso nombre a la pagina 1

--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
         <!--Receptivo. cuatro columnas para tablets, laptops y desktops - 1 columna para celulares-->
         <div class="w3-row-padding w3-center">
             <div class="w3-col m3 w3-theme-d1" onclick="document.getElementById('imagen1').style.display = 'block'">
-                <img id="img01" src="image/placa-de-video.jpg" class="w3-hover-opacity agrandar-imagen" alt="Camisa" style="width: 100%;">
+                <img id="img01" src="image/placa-de-video.jpg" class="w3-hover-opacity agrandar-imagen" style="width: 100%;">
                 <p class="w3-center">S/1519.99</p>
             </div>
             <div class="w3-col m3 w3-theme-d1" onclick="document.getElementById('imagen2').style.display = 'block'">
-                <img src="image/1585855307_ddr4_16gb_3200mhz_rgb_hyperxfury.jpg" class="w3-hover-opacity agrandar-imagen" alt="Vestido" style="width: 100%;">
+                <img src="image/1585855307_ddr4_16gb_3200mhz_rgb_hyperxfury.jpg" class="w3-hover-opacity agrandar-imagen" style="width: 100%;">
                 <p class="w3-center">S/359.99</p>
             </div>
             <div class="w3-col m3 w3-theme-d1" onclick="document.getElementById('imagen3').style.display = 'block'">
-                <img src="image/Procesadores-Intel-Core-i7-6.jpg" class="w3-hover-opacity" alt="Vestido" style="width: 100%;">
+                <img src="image/Procesadores-Intel-Core-i7-6.jpg" class="w3-hover-opacity" style="width: 100%;">
                 <p class="w3-center">S/1299.99</p>
             </div>
             <div class="w3-col m3 w3-theme-d1" onclick="document.getElementById('imagen4').style.display = 'block'">
-                <img src="image/178480-800-auto.jpg" class="w3-hover-opacity" alt="Vestido" style="width: 100%;">
+                <img src="image/178480-800-auto.jpg" class="w3-hover-opacity" style="width: 100%;">
                 <p class="w3-center">S/519.99</p>
             </div>
         </div>
