--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#somos" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-user"></i> ¿QUIÉNES SOMOS?</a>
             <a href="#tienda" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-desktop"></i> CATÁLOGO</a>
             <a href="#contacto" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-envelope"></i> CONTÁCTANOS</a>
+            <a href="login2.html" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-id-badge"></i> INICIAR SESION</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red"><i class="fas fa-search"></i></a>
         </div>
         <!--Barra de navegación para dispositivos con pantallas pequeñas-->
@@ -29,6 +30,7 @@
             <a href="#somos" class="w3-bar-item w3-button" onclick="alternarFuncion()">¿QUIÉNES SOMOS?</a>
             <a href="#tienda" class="w3-bar-item w3-button" onclick="alternarFuncion()">TIENDA</a>
             <a href="#contacto" class="w3-bar-item w3-button" onclick="alternarFuncion()">CONTÁCTANOS</a>
+            <a href="login.html" class="w3-bar-item w3-button" onclick="alternarFuncion()">INICIAR SESIÓN</a>
             <a href="#" class="w3-bar-item w3-button">BUSCAR</a>
         </div>
     </nav>
