Intentando hacerlo responsive

--- a/login2.html
+++ b/login2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/login2.css">
 </head>
 <body>
+    <main>
     <div class="container" id="container">
         <!-- Registro -->
         <div class="form-container sign-up-container">
@@ -61,5 +62,6 @@
         </div>
     </div>
     <script type="text/javascript" src="js/login2.js"></script>
+</main>
 </body>
 </html>
