--- a/cart2.html
+++ b/cart2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,79 +9,47 @@
     <link rel="stylesheet" href="css/index1.css">
     <script src="https://kit.fontawesome.com/647c5e73f8.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
 
-    <div class="header">
+<div class="header">
         <nav>
             <div class="menu-icon">
-                <span class="fas fa-bars"></span>
-            </div>
-            <div class="logo">
-                <img src="image/Logo HadtecSoft (1).png" width="125px">
-            </div>
-            <div class="nav-items">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="productos.php">Catálogo</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="login.php">Mi cuenta</a></li>
-            </div>
-            <div class="shopping-icon">
+          <span class="fas fa-bars"></span></div>
+          <div class="logo">
+            <img src="image/Logo HadtecSoft (1).png" width="125px"></div>
+          <div class="nav-items">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Nosotros</a></li>
+          <li><a href="productos.php">Catálogo</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="login.php">Mi cuenta</a></li>
+          </div>
+          <div class="shopping-icon">
                 <a href="cart.php" class="py-2 rounded-pill color-primary-bg">
                     <span class="font-size-16 px-2 text-black"><i class="fas fa-shopping-cart"></i></span>
-                    <span class="px-3 py-2 rounded-pill text-light bg-dark"><?php echo count($product->getData('carrocompras')); ?></span>
+                    <span class="px-3 py-2 rounded-pill text-light bg-dark"></span>
                 </a>
-            </div>
-            <div class="search-icon">
-                <span class="fas fa-search"></span>
-            </div>
-            <div class="cancel-icon">
-                <span class="fas fa-times"></span>
-            </div>
-            <div class="busca">
-                <form name="busc" action="results.php" method="get">
-                    <input type="search" name="busqueda" class="search-data" placeholder="Buscar" required>
-                    <button type="submit" name="enviar" class="fas fa-search"></button>
-                </form>
-            </div>
+          </div>
+    <div class="search-icon">
+    <span class="fas fa-search"></span></div>
+    <div class="cancel-icon">
+    <span class="fas fa-times"></span></div>
+    <div class="busca">
+        <form name="busc" action="results.php" method="get">
+            <input type="search" name="busqueda" class="search-data" placeholder="Buscar" required>
+            <button type="submit" name="enviar" class="fas fa-search"></button>
+        </form>
+    </div>
         </nav>
-        <div class="container">
-            <div class="navbar">
-            </div>
-            <div class="row">
-                <div class="col-2">
-                    <h1>Descubre la nueva manera de <br> adquirir hardware</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi corporis <br> culpa, minima aut totam voluptatibus qui vero mollitia sit maxime.</p>
-                    <a href="#" class="btn">Ver más &#8594;</a>
-                </div>
-                <div class="col-2">
-                    <img src="image/budget-gaming-pc.png">
-                </div>
-            </div>
-        </div>
-    </div>
+</div>
 
-    <!--Categorías destacadas-->
 
-    <div class="categories">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-3">
-                    <img src="image/categoria-laptop.jpg">
-                </div>
-                <div class="col-3">
-                    <img src="image/categoria-placas.jpg">
-                </div>
-                <div class="col-3">
-                    <img src="image/categoria-servicios.jpg">
-                </div>
-            </div>
-        </div>
+<!--Detalles del carrito de compras-->
 
-    </div>
 
-    <!--Productos destacados-->
+
+
+<!--Productos destacados-->
 
     <div class="small-container">
         <h2 class="title">Productos destacados</h2>
@@ -189,53 +156,7 @@
         </div>
     </div>
 
-    <!--Oferta-->
-    <!--Nuestros clientes nos avalan-->
-    <div class="testimonial">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa officia ut voluptatibus consequatur nam praesentium velit, quam molestiae, eius odio quisquam. Cupiditate deserunt non odit qui ullam reiciendis sequi saepe!</p>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-o"></i>
-                    </div>
-                    <img src="image/user.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
-                </div>
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa officia ut voluptatibus consequatur nam praesentium velit, quam molestiae, eius odio quisquam. Cupiditate deserunt non odit qui ullam reiciendis sequi saepe!</p>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-o"></i>
-                    </div>
-                    <img src="image/user.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
-                </div>
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa officia ut voluptatibus consequatur nam praesentium velit, quam molestiae, eius odio quisquam. Cupiditate deserunt non odit qui ullam reiciendis sequi saepe!</p>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-o"></i>
-                    </div>
-                    <img src="image/user.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
     <!--Footer-->
     <div class="footer">
@@ -246,7 +167,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, consectetur.</p>
                 </div>
                 <div class="footer-col-2">
-                    <img src="image/Logo HadtecSoft (1).png">
+                <img src="image/Logo HadtecSoft (1).png">
                     <p>Nuestro propósito es hacer la compra de hardware y servicios técnicos de forma placentera</p>
                 </div>
                 <div class="footer-col-3">
@@ -270,9 +191,7 @@
             <p class="copyright">HadtecSoft - Todos los derechos reservados 2021</p>
         </div>
     </div>
-    <!--JS-->
-    <script src="js/index1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+        <!--JS-->
+        <script src="js/index1.js"></script>
 </body>
-
 </html>
